# tsano

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  annotate.c  fiber.c  syscall.c  tmplr.c  tmplr.cmake  tsano  tsano.c  tsano.c.in
.github/: Dockerfile.alpine
.github/workflows/: actions.yml  docker.yml
bench/: .gitignore  Makefile  bench.mk
bench/leveldb/: Makefile
bench/lib/: CMakeLists.txt
bench/micro/: CMakeLists.txt  Makefile  micro.c  micro2.c  micro3.c  microcb.c
cmake/: tmplr.cmake
core/: CMakeLists.txt  core.c  idmap.c  ps_builtin.c  ps_plugin.c  rbtree.c
doc/: design.md
fastch/: CMakeLists.txt
include/: CMakeLists.txt
include/bingo/: capture.h  compiler.h  idmap.h  intercept.h  interpose.h  log.h  macros.h  malloc.h  memaccess.h  mempool.h  module.h  now.h  pthread.h  pubsub.h  rbtree.h  real.h  self.h  semaphore.h  stacktrace.h  switcher.h  task_id.h  thread_id.h  topics.h  uset.h
include/bingo/capture/: cxa.h  malloc.h  memaccess.h  pthread.h  semaphore.h  stacktrace.h
include/bingo/intercept/: cxa.h  malloc.h  memaccess.h  pthread.h  semaphore.h  stacktrace.h
include/dice/: compiler.h  dispatch.h  handler.h  idmap.h  intercept.h  interpose.h  log.h  mempool.h  module.h  now.h  pubsub.h  self.h  switcher.h  thread_id.h
include/dice/chains/: capture.h  intercept.h
include/dice/events/: cxa.h  dice.h  malloc.h  memaccess.h  mman.h  pthread.h  semaphore.h  stacktrace.h  thread.h
include/dice/intercept/: cxa.h  malloc.h  memaccess.h  pthread.h  semaphore.h  stacktrace.h
lib/: CMakeLists.txt  capture.c  core.c  core.h  idmap.c  intercept.c  mempool.c  pubsub.c  rbtree.c  rbtree_test.c  self.c  switcher.c  uset.c
mod/: CMakeLists.txt  autocept.c  autocept.h  autocept_generic.S  autocept_list.S  autocept_x86_64.S  cxa.cpp  defs.h  logger.c  malloc.c  pthread_cond.c  pthread_create.c  pthread_mutex.c  pthread_rwlock.c  self.c  self.h  sem.c  sequencer.c  stacktrace.c  tsan.c  tsan.c.in
scripts/: CMakeLists.txt  benchmark.sh  bingo  bingo-builtin  dice  dice-builtin  tsano  update-bench-index.sh
src/: CMakeLists.txt  intercept.c  mempool.c  pubsub.c
src/core/: CMakeLists.txt  idmap.c  mempool.c  ps_builtin.c  rbtree_test.c  switcher.c
src/dice/: CMakeLists.txt  box.c  dispatch.c  dispatch.c.in  dispatch_0.c  dispatch_1.c  dispatch_2.c  dispatch_3.c  dispatch_4.c  dispatch_5.c  dispatch_6.c  dispatch_chain.c.in  loader.c  mempool.c  ps_builtin.c  ps_plugin.c  pubsub.c  rbtree.c  rbtree_test.c  switcher.c
src/fastch/: CMakeLists.txt  dispatch.c.in
src/mod/: CMakeLists.txt  autocept.c  autocept.h  autocept_aarch64.S  cxa.c  cxa.cpp  defs.h  logger.c  malloc.c  mman.c  pthread_cond.c  pthread_create.c  pthread_mutex.c  pthread_rwlock.c  self.c  sem.c  sequencer.c  stacktrace.c  switcher.c  tsan.c  tsan.c.in
src/tsano/: CMakeLists.txt
test/: CMakeLists.txt  capture_event.c  intercept_event.c  pthread_create_detach.c  pthread_create_exit.c  pthread_create_join.c  simple-tsan.c  simple.c
test/cxx/: global_static_init.cpp  static_global.cpp
test/interpose/: CMakeLists.txt  cxa_test.c  interpose_test.c.in  interposed.h.in  malloc_test.c  mman_test.c  pthread_cond_test.c  pthread_create_test.c  pthread_mutex_test.c  pthread_rwlock_test.c  sem_test.c
test/order/: CMakeLists.txt  defs.h  empty_publisher.c  order_test.c  publisher.c  subscriber.c
test/tsan/: CMakeLists.txt  tsan_test.c  tsan_test.c.in
test/unit/: pubsub_test.c
tsano/: CMakeLists.txt  tsano.c  tsano.c.in
